--- a/src/index.css
+++ b/src/index.css
@@ -378,3 +378,42 @@ p {
   background-color: rgb(175, 99, 7);
   color: white;
 }
+.menu {
+  display: grid;
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 50px;
+  margin-top: 2rem;
+}
+.food {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+.food img {
+  width: 225px;
+  height: 150px;
+  border: 3px solid #c59d5f;
+}
+.NPD {
+  display: flex;
+  flex-direction: column;
+  margin-left: 2rem;
+}
+.NP {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-bottom: 1px dotted;
+  padding-bottom: 0;
+}
+.NP h4 {
+  margin: 0;
+}
+.NP p {
+  margin: 0;
+  color: #c59d5f;
+  font-weight: bold;
+}
